Добавил метрики + prometeus, grafana
